# windows_gadgets

./: .gitignore  README.md  pyproject.toml
ali-ddns/: requirements.txt  upload.py
functional-capslock/: README.md  functional_capslock.py  requirements.txt
ime-chinese-switching/: README.md  ime_chinese.py  ime_chinese_switching.py  requirements.txt
remove-pwsh-history/: remove_pwsh_history.py
replace-punctuation-with-en/: replace_punctuation_with_en.py
src/ali_ddns/: README.md  upload.py
src/forward_url_proxy/: README.md  forward_url_proxy.py
src/functional_capslock/: README.md  functional_capslock.py
src/guard_running/: README.md  guard_running.py
src/ime_chinese_switching/: README.md  ime_chinese_switching.py
src/remove_pwsh_history/: README.md  remove_pwsh_history.py
src/replace_punctuation_with_en/: README.md  replace_punctuation_with_en.py
